k8s/2-postgredb.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pod

  template:
    metadata:
      labels:
        app: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
