k8s/2-postgresqldb.yaml
# [3] PostgreSQL DB 배포 정의 (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # DB는 데이터 꼬임을 방지하기 위해 기본 1개로 시작합니다.
  selector:
    matchLabels:
      app: postgres-pod
  template:
    metadata:
      labels:
        app: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432

          # [1단계에서 만든 ConfigMap과 Secret을 환경 변수로 주입]
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data # PostgreSQL이 데이터를 쌓는 기본 경로입니다.

      # [PVC 요청서를 기반으로 볼륨을 준비]
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc # [중요] ConfigMap에 적었던 그 이름 그대로 설정합니다!
spec:
  ports:
    - port: 5432 # 서비스가 제공할 포트
      targetPort: 5432 # 실제 PostgreSQL 파드가 리스닝하는 포트
  selector:
    app: postgres-pod # 2단계에서 만든 PostgreSQL 파드의 labels와 일치해야 합니다!
  type: ClusterIP # 클러스터 내부에서만 통신하도록 설정 (내선 번호)
