k8s/6-ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-ui-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: bookmarker-ui-svc # 4-bookmarker-ui.yaml 의 service name 이다
                port:
                  number: 3000
            path: / # /로 시작하는 모든 경로가 규칙에 매핑
            pathType: Prefix
